# resonance

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml
docs/: DESIGN.md  INDEX.md  TODO.md  WEB_DESIGN.md
docs/adr/: 2026-04-08-initial-scaffold.md  2026-04-08-stride-chain-2d-sweep.md
src/: buffer.rs  constants.rs  lib.rs  main.rs  oracle.rs  orchestrator.rs  results.rs  rng.rs  timer.rs
src/analysis/: cache.rs  mod.rs
src/arch/: generic.rs  mod.rs  x86_64.rs
src/kernels/: latency.rs  lcg.rs  mod.rs
src/platform/: linux.rs  mod.rs
tests/: buffer_tests.rs  oracle.rs
