[package]
name = "resonance"
version = "0.1.0"
edition = "2021"
description = "Memory hierarchy characterization tool"
license = "MIT"

[dependencies]
libc = "0.2"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
approx = "0.5"

[profile.release]
opt-level = 3
lto = true
